--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -3,7 +3,7 @@
 		"authors": [
 			"Ajeje Brazorf",
 			"Amire80",
-			"Asko",
+			"pskyechology",
 			"Universal Omega",
 			"Verdy p"
 		]
@@ -42,22 +42,5 @@
 	"discordnotifications-view-user-rights": "Used as link text of the button for Viewing or managing user rights",
 	"discordnotifications-change-user-groups": "A notification text for when a user changes another user's groups\n\nParameters:\n* $1 - the username\n* $2 - target\n* $3 - new groups",
 	"discordnotifications-change-user-groups-with-old": "A notification text for when a user changes another user's groups\n\nParameters:\n* $1 - the username\n* $2 - target\n* $3 - old groups\n* $4 - new groups",
-	"discordnotifications-flow-edit-header": "A notification text for when a user edits the header of a flow board\n\nParameters:\n* $1 - the username\n* $2 - link",
-	"discordnotifications-flow-edit-post": "A notification text for when a user edits a flow topic\n\nParameters:\n* $1 - the username\n* $2 - link",
-	"discordnotifications-flow-edit-title": "A notification text for when a user edits the title of a flow topic\n\nParameters:\n* $1 - the username\n* $2 - new topic title\n* $3 - talk page",
-	"discordnotifications-flow-edit-topic-summary": "A notification text for when a user edits the summary of a flow topic\n\nParameters:\n* $1 - the username\n* $2 - talk page",
-	"discordnotifications-flow-lock-topic": "A notification text for when a user (un)locks a flow topic\n\nParameters:\n* $1 - the username\n* $2 - action\n* $3 - link of the topic",
-	"discordnotifications-flow-lock-topic-lock": "Clause of resolving a topic",
-	"discordnotifications-flow-lock-topic-unlock": "Clause of reopening a topic",
-	"discordnotifications-flow-moderate-post": "A notification text for when a user moderates a flow post\n\nParameters:\n* $1 - the username\n* $2 - action\n* $3 - link of the topic",
-	"discordnotifications-flow-moderate-topic": "A notification text for when a user moderates a flow topic\n\nParameters:\n* $1 - the username\n* $2 - action\n* $3 - link of the topic",
-	"discordnotifications-flow-moderate-hide": "Clause of hiding a flow topic",
-	"discordnotifications-flow-moderate-unhide": "Clause of unhiding a flow topic",
-	"discordnotifications-flow-moderate-suppress": "Clause of suppressing a topic",
-	"discordnotifications-flow-moderate-unsuppress": "Clause of unsuppressing a topic",
-	"discordnotifications-flow-moderate-delete": "Clause of deleting a topic",
-	"discordnotifications-flow-moderate-undelete": "Clause of undeleting a topic",
-	"discordnotifications-flow-new-topic": "A notification text for when a user creates a now flow topic\n\nParameters:\n* $1 - the username\n* $2 - link of topic\n* $3 - talk page",
-	"discordnotifications-flow-reply": "A notification text for when a user replies in a flow topic\n\nParameters:\n* $1 - the username\n* $2 - link of topic",
 	"discordnotifications-moderation-pending": "A notification text for when a user submits an edit to the moderation queue\n\nParameters:\n* $1 - the username\n* $2 - page\n* $3 - link to the moderation queue"
 }
