--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+Changes since 3.1.0
+
+Fix:
+* Incorrect author on uploads via Moderation.
+* Page edits on files not sending notifications.
+
+----
+
 3.1.0
 
 Support for APIFlowAfterExecute (Flow/Structured Discussions) is dropped, as it is unmaintained and will be removed from Miraheze.
